--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ end_of_line = lf
 indent_style = tab
 indent_size = 2
 
+[*.json]
+indent_style = tab
+indent_size = 2
+
 [*.{yml, yaml}]
 indent_style = space
 indent_size = 2
