--- a/.editorconfig
+++ b/.editorconfig
@@ -7,11 +7,7 @@ indent_size = 4
 insert_final_newline = true
 end_of_line = lf
 
-[*.rst]
-indent_style = tab
-indent_size = 2
-
-[*.json]
+[*.{rst, json}]
 indent_style = tab
 indent_size = 2
 
