--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/locales"]
-	path = src/locales
-	url = https://github.com/scdesktop/scdesktop-locales.git
+[submodule "src/assets/locales"]
+	path = src/assets/locales
+	url = https://github.com/scdesktop/locales.git
